--- a/Bio.html
+++ b/Bio.html
@@ -8,7 +8,7 @@
 	<h1>Student Bio</h1>
 	<h2>Maddy Gould</h2>
 	 <img src="http://www.placehold.it/200x200" alt="placehold">
-<p>Graphic Designer who wants more money so im taking this class so i can get it.</p>
+<p>Graphic Designer who wants more money so im taking this class so i can get itwehrkjwher.</p>
 <h3>Contact Info</h3>
 <ul>
    <li>Email: Maddykgould@gmail.com</li>
